--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "ethers": "^5",
     "react": "^18.2.0",
     "react-dom": "^18.2",
-    "react-router-dom": "^6.21.3"
+    "react-router-dom": "^6.21.3",
+    "web3": "^4.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^2",
